docs/documentation/styles/documentation.scss
// sass-lint:disable-all
@charset 'utf-8';

::-webkit-scrollbar {
    width: .5rem;
    height: .5rem;
}

::-webkit-scrollbar-track-piece {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: #cfd8dc;
}

html,
body {
    height: 100%;
}

body {
    margin: 0;
    font-family: 'Open Sans', sans-serif;
}

.container {
    display: flex;
    height: 100%;

    .sidebar {
        background: linear-gradient(#2196f3 0%, #2156ff 100%);
        width: 4rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        padding: 1rem 0;
        box-sizing: border-box;
        flex-shrink: 0;

        .sidebar-eve-link,
        .sidebar-github-link {
            display: flex;
            padding: .5rem;
            border-radius: 50%;
            background: rgba(255, 255, 255, 0);

            &:hover {
                background: rgba(255, 255, 255, .1);
            }

            svg {
                width: 1.5rem;
                height: 1.5rem;
                fill: #fff;
            }
        }
    }

    .navigation {
        width: 15rem;
        background: #eceff1;
        padding: 3rem 0;
        overflow: auto;
        box-sizing: border-box;
        flex-shrink: 0;

        .navigation-header {
            padding: 0 3rem;
            text-transform: uppercase;
            font-size: .75rem;
            font-weight: bold;
            line-height: 2rem;
            color: #333;
        }

        .navigation-list {
            &:not(:last-child) {
                margin-bottom: 1rem;
            }
        }

        .navigation-list-item {
            padding-left: 4rem;
            cursor: pointer;
            text-decoration: none;
            display: block;
            color: #333;
            font-size: .75rem;
            text-transform: uppercase;
            line-height: 2rem;

            &:hover,
            &.is-active {
                color: #2196f3;
            }

            &.is-active {
                font-weight: 600;
            }
        }
    }

    .component {
        flex: 1;
        overflow: auto;
        height: 100%;
        padding: 3rem 6rem;
        box-sizing: border-box;

        .component-name {
            color: #2196f3;
            font-size: 1.25rem;
            line-height: 1.75rem;
            text-transform: uppercase;
            font-weight: 600;
        }

        .component-content {
            margin-top: 2rem;
            padding-top: 2rem;
            border-top: 1px dashed #cfd8dc;

            .component-example {
                margin-bottom: 1rem;
            }

            .component-code {
                background: #263238;
                color: #fff;
                font-family: monospace;
                font-size: .75rem;
                line-height: 1.125rem;
                margin: 0;
                padding: 1rem 1.5rem;
                position: relative;
                white-space: pre-wrap;

                .tag {
                    color: #ff6188;
                }

                .attr {
                    color: #78dce8;
                    font-style: italic;
                }

                .val {
                    color: #a9dc76;
                }

                .sign {
                    color: #9e9e9e;
                }

                &:not(:last-child) {
                    margin-bottom: 1.5rem;
                }
            }
        }
    }
}

